Use SailConnectionListener to efficiently track updates to the underlying RDF store.